Translation, Rotation, Projection and Zoom

--- a/virtual-camera/virtual-camera.csproj
+++ b/virtual-camera/virtual-camera.csproj
@@ -9,13 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="scene1.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <PackageReference Include="log4net" Version="2.0.15" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.15" />
+    <None Update="Scenes\scene1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
