--- a/virtual-camera/virtual-camera.csproj
+++ b/virtual-camera/virtual-camera.csproj
@@ -17,6 +17,9 @@
     <None Update="Scenes\scene1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Scenes\scene2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
