Update obstruction algorithm

--- a/virtual-camera/virtual-camera.csproj
+++ b/virtual-camera/virtual-camera.csproj
@@ -29,10 +29,9 @@
     <None Update="Scenes\scene4.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Objects" />
+    <None Update="Scenes\scene5.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
